@@ -14,25 +14,33 @@
 <body>
     <h1>Map Generator : Diamond-square algorithm</h1>
     <div id="left"></div>
-    <div id="right">
-        Press <span class="key">SHIFT</span> for generating a new map. <br>
-        Press <span class="key">P</span> for saving the map as an image.<br>
-        Press <span class="key">B</span> for displaying / hidding borders.<br><br>
-        <label for="name">Seed (max 32 characters):</label>
-        <input type="text" name="name" id="seed"  maxlength="32" value="" /> 
-        <br/>
+	<div id="right">
+		Press <span class="key">SHIFT</span> for generating a new map. <br>
+		Press <span class="key">P</span> for saving the map as an image.<br>
+		Press <span class="key">B</span> for displaying / hidding borders.<br>
+		<br> <label for="name">Seed (max 32 characters):</label> <input
+			type="text" name="name" id="seed" maxlength="32" value="" /> <br />
 		<div class="toggle-container">
-			<span class="toggle-title">Intermediate rounding</span> <label class="toggle">
-				<input type="checkbox" id="toggleRounding"   checked/> <span				
-				class="slider"></span>
-				
+			<span class="toggle-title">Intermediate rounding</span> <label
+				class="toggle"> <input type="checkbox" id="toggleRounding"
+				checked /> <span class="slider"></span>
+
 			</label>
 		</div>
 		<div class="toggle-container">
-			<span class="toggle-title">Fix Height Alone Points</span> <label class="toggle">
-				<input type="checkbox" id="togglefixHeightAlonePoints"  checked/> <span
-				class="slider"></span>
+			<span class="toggle-title">Fix Height Alone Points</span> <label
+				class="toggle"> <input type="checkbox"
+				id="togglefixHeightAlonePoints" checked /> <span class="slider"></span>
 			</label>
+		</div>
+		<div class="toggle-container">
+			<span class="toggle-title">Shrink coeff random</span>
+			<div class="range-container">
+				<input type="range" class="range-slider" id="rangeShrinkCoeffRandom" min="0"
+					max="100" value="42">
+				<div class="tooltip" id="tooltip">0.42</div>
+
+			</div>
 		</div>
 		<br>
         <div id="divseed">
@@ -48,8 +56,7 @@
      <script type="module">
         import  {toggleCheckbox}  from './main.js';
 
-        document.getElementById('toggleRounding').addEventListener('change', toggleCheckbox);
-		document.getElementById('togglefixHeightAlonePoints').addEventListener('change', toggleCheckbox);
+      
 
        
     </script>
