@@ -74,7 +74,7 @@ body {
 .toggle-title {
 	margin-right: 10px;
 	width: 300px;
-	/* font-weight: bold; */
+/* font-weight: bold; */
 }
 
 .toggle {
@@ -106,5 +106,39 @@ body {
 .toggle input:checked + .slider {
 	background-color: #4caf50;
 	left: 28px;
+}
+
+.range-container {
+	position: relative;
+	width: 300px;
+	margin: 5px auto;
+}
+
+.range-slider {
+	width: 100%;
+}
+
+.tooltip {
+	position: absolute;
+	top: -30px;
+	left: 50%;
+	transform: translateX(-50%);
+	background-color: #333;
+	color: #fff;
+	padding: 5px 10px;
+	border-radius: 5px;
+	display: none;
+	font-size: 14px;
+}
+
+.tooltip::after {
+	content: '';
+	position: absolute;
+	bottom: -5px;
+	left: 50%;
+	transform: translateX(-50%);
+	border-width: 5px;
+	border-style: solid;
+	border-color: #333 transparent transparent transparent;
 }
 
